<resources>
    <string name="app_name">我的记账本</string>
    <string name="main_bottom_tab_0">流水</string>
    <string name="main_bottom_tab_1">账户</string>
    <string name="main_bottom_tab_2">图标</string>
    <string name="main_bottom_tab_3">理财</string>
    <string name="main_bottom_tab_4">更多</string>
    <string name="add_account_book_activity_title">添加账本</string>
    <string name="add_account_book_detail_account_name">账本名</string>
    <string name="add_account_book_detail_account_name_hint">点击输入账本名称</string>
    <string name="add_account_book_detail_theme">面板主题</string>
    <string name="income">本月收入:</string>
    <string name="expend">本月支出:</string>
    <string name="budget_balance">预算余额:</string>
    <string name="main_menu_bottom_button_add">添加</string>
    <string name="main_menu_bottom_button_edit">编辑</string>
    <string name="main_menu_bottom_button_finish">完成</string>

    <string name="face_board_top_left_1">面板数据1</string>
    <string name="face_board_top_left_2">面板数据2</string>
    <string name="face_board_top_left_3">面板数据3</string>

    <string name="face_board_content_title_1">数据自定义</string>
    <string name="face_board_content_title_2">背景图片选择</string>

    <string-array name="face_board_record_action_title">
        <item>面板数据1</item>
        <item>面板数据2</item>
        <item>面板数据3</item>
    </string-array>

    <string name="change_board_title">定制首页下看板</string>

</resources>
