<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="75dp"
    android:layout_height="50dp">
    <ImageView
        android:id="@+id/book_icon"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/book_template_bg_9"/>
    <LinearLayout
        android:padding="2dp"
        android:layout_gravity="bottom|left"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/icon_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="4sp"
            android:text="@string/expend"/>
        <TextView
            style="@style/icon_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="6sp"
            android:text="200.00"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/icon_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="4sp"
                android:text="@string/income"/>
            <TextView
                style="@style/icon_text_color"
                android:textSize="4sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200.00"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:padding="2dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/icon_text_color"
            android:textSize="4sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_balance"/>
        <TextView
            style="@style/icon_text_color"
            android:textSize="4sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="200.00"/>
    </LinearLayout>
</FrameLayout>