<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/base_background"
    tools:context=".activity.menu.AddAccountBookDetailActivity">
    <FrameLayout
        style="@style/action_bar_style"
        >
        <include layout="@layout/action_bar_title"/>
        <TextView
            android:id="@+id/action_bar_save_text_view"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/action_bar_text_size"
            android:textColor="@color/action_bar_text_color"
            android:paddingRight="@dimen/action_bar_padding"
            android:text="保存"/>
    </FrameLayout>

    <FrameLayout
        android:clickable="true"
        android:background="@drawable/selector_button_click_background"
        android:id="@+id/account_book_name_layout"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_base_size"
            android:textColor="#353535"
            android:text="@string/add_account_book_detail_account_name"/>
        <EditText
            android:id="@+id/add_account_book_edit_name_edit_text"
            android:gravity="right"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:maxLength="8"
            android:textSize="@dimen/text_view_base_size"
            android:background="@null"
            android:imeOptions="actionNext"
            android:hint="@string/add_account_book_detail_account_name_hint"
            />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider"
        android:background="@color/view_color"/>
    <FrameLayout
        android:background="@drawable/selector_button_click_background"
        android:padding="16dp"
        android:id="@+id/account_book_detail_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_vertical|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_base_size"
            android:textColor="#353535"
            android:text="@string/add_account_book_detail_theme"/>

        <LinearLayout
            android:layout_gravity="right|center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <include layout="@layout/icon_layout"/>
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/finance_wallet_arrow_right"/>
        </LinearLayout>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider"
        android:background="@color/view_color"/>
    <View
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <CheckBox
        android:layout_marginBottom="10dp"
        android:button="@drawable/selector_button"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="暂不同步"/>
</LinearLayout>
