<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.suishouji.FaceBoardActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/action_bar_background">

        <include layout="@layout/action_bar_title" />

        <LinearLayout
            android:id="@+id/action_bar_content_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="旅游面板"
                android:textColor="@color/action_bar_text_color"
                android:textSize="@dimen/action_bar_text_size" />

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/action_bar_icon_size"
                android:layout_height="@dimen/action_bar_icon_size"
                android:src="@drawable/common_title_btn_arrow_right" />
        </LinearLayout>
    </FrameLayout>

    <include layout="@layout/face_board_top_layout" />
    <View
        android:id="@+id/viewShow"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <ScrollView
        android:id="@+id/face_board_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                style="@style/face_board_title_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/face_board_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/face_board_content_title_1" />
            </FrameLayout>

            <include layout="@layout/view_divider"/>
            <FrameLayout
                android:id="@+id/face_board_1"
                style="@style/face_board_content_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/face_board_content_title_text_style"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/face_board_top_left_1"/>
                <LinearLayout
                    android:layout_margin="@dimen/action_bar_padding"
                    android:layout_gravity="right|center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/face_board_content_1"
                        style="@style/face_board_content_content_text_style"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="预算余额"/>
                    <ImageView
                        style="@style/face_board_content_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/finance_wallet_arrow_right"/>
                </LinearLayout>
            </FrameLayout>
            <include layout="@layout/view_divider"/>
            <FrameLayout
                android:id="@+id/face_board_2"
                style="@style/face_board_content_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/face_board_content_title_text_style"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="面板数据2"/>
                <LinearLayout
                    android:layout_margin="@dimen/action_bar_padding"
                    android:layout_gravity="right|center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/face_board_content_2"
                        style="@style/face_board_content_content_text_style"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="预算余额"/>
                    <ImageView
                        style="@style/face_board_content_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/finance_wallet_arrow_right"/>
                </LinearLayout>
            </FrameLayout>
            <include layout="@layout/view_divider"/>
            <FrameLayout
                android:id="@+id/face_board_3"
                style="@style/face_board_content_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/face_board_content_title_text_style"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="面板数据3"/>
                <LinearLayout
                    android:layout_margin="@dimen/action_bar_padding"
                    android:layout_gravity="right|center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/face_board_content_3"
                        style="@style/face_board_content_content_text_style"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="预算余额"/>
                    <ImageView
                        style="@style/face_board_content_icon_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/finance_wallet_arrow_right"/>
                </LinearLayout>
            </FrameLayout>
            <include layout="@layout/view_divider"/>
            <FrameLayout
                style="@style/face_board_title_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/face_board_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/face_board_content_title_2" />
            </FrameLayout>
            <include layout="@layout/view_divider"/>
            <android.support.v7.widget.RecyclerView
                android:background="#fff"
                android:id="@+id/icon_list"
                android:padding="@dimen/action_bar_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
